# xbi_advisor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  pre-commit.yml  run-typeform.yml
cloud_function/: Dockerfile  cloudbuild.yaml  main.py
examples/: demo.py  manual_responses.json  sample_report.md
tests/: conftest.py  test_advisory_engine.py  test_async_advisory_engine.py  test_manual_fixture.py  test_parser.py  test_rules_engine.py  test_webhook_transform.py
tests/fixtures/: sample_rules.yaml
xbi_advisor/: __init__.py  __main__.py  engine.py  export_typeform_responses.py  generate_pdf.py  llm.py  main_deployment.py  parser.py  rules_engine.py  typeform_output.py  xbi_advisor_app.py
xbi_advisor/assets/properties/: looker.yaml  powerbi.yaml  tableau.yaml
xbi_advisor/assets/rules/: rules.yaml
xbi_advisor/assets/templates/: question_mapping.json  recommendation_template.md  scores_template.md
xbi_advisor/assets/user_input/: user_input.yaml
xbi_advisor/assets/xebia_services/: xebia_services.yaml
xbi_advisor/models/: advisory_result.py  bi_tools.py  enums.py  match_result.py  types.py  user_input.py  xebia_services.py
xbi_advisor/modules/: config.py
